fix for z-index

--- a/_sass/main-items.scss
+++ b/_sass/main-items.scss
@@ -284,7 +284,7 @@ footer {
     }
   }
   .btn {
-    z-index: 999;
+    z-index: 99;
   }
   .media_container:before {
     content: '';
